--- a/groups_and_messages/templates/chat_room_page.html
+++ b/groups_and_messages/templates/chat_room_page.html
@@ -528,7 +528,7 @@ message_header['{{ group.id }}']=0;
 <img src="{{ user.get_avatar }}" style="float: top;height: 10%;width:60%;border-radius: 50%;margin-left: 20%;margin-top:5%;object-fit: cover">
   <div id="username_container">  {{ user.username }} </div>
 
-    <div class="options options_hover" style="margin-top:80%">
+    <div class="options options_hover" style="margin-top:80%" onclick="window.open('{% url 'edit_user_info' %}')">
         Edit Profile
     </div>
 
